# kitchencompanion

./: .gitignore  README.md  activation_email.txt  commands.md  conftest.py  manage.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  tmp.txt  views_test_cases.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.css  App.js  App.tsx  index.tsx
frontend/src/components/: AddButton.js  AddButton.tsx  Header.js  Header.tsx  Item.js  Item.tsx  ItemModal.js  ItemModal.ts  ItemModal.tsx  ItemsList.js  ItemsList.tsx  ListItem.js  ShoppingList.js  ShoppingList.tsx  ShoppingListHeader.js  ShoppingListHeader.tsx  ShoppingListInputs.js  ShoppingListInputs.ts
kitchencompanion/: asgi.py  settings.py  urls.py  wsgi.py
shoppinglist/: admin.py  constants.py  forms.py  mixins.py  models.py  permissions.py  serializers.py  urls.py  views.py
shoppinglist/migrations/: 0001_initial.py  0002_alter_item_shoppinglist.py  0002_shoppinglist_shared_with.py  0003_alter_item_options_alter_shoppinglist_options_and_more.py  0003_alter_shoppinglist_shared_with.py  0004_alter_item_category_alter_item_unit.py  0005_alter_item_category_alter_item_quantity.py  0006_alter_item_shopping_list.py
shoppinglist/tests/: conftest.py  error_messages.py  test_mixins.py  test_models.py  test_serializers.py  test_views.py  urls.py
templates/: base.html
templates/shoppinglist/: create-update.html  delete.html  list.html
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/tests/: test_permissions.py  test_views.py
(+14 files in other folders)
